--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -48,10 +48,10 @@
         </ion-list>
       </ion-card>
 </ion-content>
-<ion-footer>
+<!-- <ion-footer>
     <ion-toolbar>
       <ion-title>Demo 2018.</ion-title>
     </ion-toolbar>
-  </ion-footer>
+  </ion-footer> -->
 
 
