--- a/src/pages/loginpage/loginpage.html
+++ b/src/pages/loginpage/loginpage.html
@@ -7,7 +7,7 @@
   <h1 style="text-align: center; margin-top: 10%;font-style:italic; font-family:Cambria; font-size:30px">Biometric Auth <br> Demo App</h1>    
 
     <div class="imgcontainer">
-    <img src="assets/imgs/HDfingerprint.jpg" alt="Avatar" class="avatar">
+    <img src="../../assets/imgs/logo.png" alt="Avatar" class="avatar">
   </div>
 
   <form style="margin-top: 10%" >
